--- a/TechVJ/template/req.html
+++ b/TechVJ/template/req.html
@@ -294,7 +294,7 @@
                 var theDate=new Date() 
                     document.write(theDate.getFullYear()) 
             </script> Copyright :
-                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/vj_botz">Tech VJ</a>
+                <a class="bg-clip-text text-[16px] text-transparent bg-gradient-to-r from-pink-500 to-violet-500 font-bold tracking-wide px-1" href="https://telegram.me/Cv_update">Tech VJ</a>
                 
                 All right reserved
             </div>   
